[package]
name = "mrgarvey"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde = { version ="1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
dropshot = "0.16"
tokio = { version = "1", features = ["full"] }
schemars = "0.8"
http = "1"
